Refactor `VertexRepairPanel`: clean up unused code, replace `JTextField` with `DoubleTextField`, and add utility methods for graph repair and sorting logic.